--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>TnP </title>
+    <title>Training and Placement SoE </title>
   </head>
   <body>
     <noscript>Training and Placement Cell Tezpur University</noscript>
